# implica

./: .gitignore  ANALISIS_CODIGO_RUST.md  API.pyi  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  test_error_handling.py  test_path_pattern.py
.githooks/: pre-commit
.github/workflows/: test.yml
demo/: main.py  viewer.html
examples/: path_pattern_demo.py
python/implica/: __init__.py  __init__.pyi
src/: constants.rs  context.rs  errors.rs  graph.rs  lib.rs  matches.rs  patterns.rs  properties.rs  query.rs  term.rs  type_index.rs  type_schema.rs  types.rs
src/graph/: alias.rs  base.rs  create.rs  edge.rs  mod.rs  node.rs  property_map.rs
src/graph/create/: edge.rs  node.rs  path.rs
src/graph/matches/: edge.rs  node.rs  path.rs  properties.rs  term_schema.rs  type_schema.rs
src/macros/: ctx.rs
src/patterns/: edge.rs  mod.rs  node.rs  parsing.rs  path.rs  term_schema.rs  type_schema.rs
src/query/: base.rs  mod.rs
src/query/executors/: add.rs  create.rs  delete.rs  match.rs  order_by.rs  set.rs  where.rs  with.rs
src/query/executors/create/: base.rs  edge.rs  node.rs  path.rs
src/query/executors/match/: edge.rs  node.rs
src/query/references/: base.rs  edge.rs  mod.rs  node.rs  term.rs  type.rs
src/typing/: constants.rs  mod.rs  term.rs  types.rs
src/utils/: clone_property_map.rs  cmp.rs  data_queue.rs  eval.rs  hex_to_uid.rs  mod.rs  placeholder.rs  validation.rs
tests/: conftest.py  test_create.py  test_errors.py  test_graph.py  test_graph_set_properties.py  test_index_config.py  test_match.py  test_match_create.py  test_node_terms.py  test_patterns.py  test_query.py  test_query_enhanced.py  test_query_operations.py  test_set.py  test_set_term.py  test_terms.py  test_type_schema.py  test_types.py  test_uid_caching.py
tests/test_graph/: test_graph.py  test_node.py
tests/test_patterns/: test_term_schema.py  test_type_schema.py
tests/test_query/: test_create.py
tests/test_typing/: test_type.py
