[package]
name = "implica"
version = "1.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "implica"
crate-type = ["cdylib", "rlib"]

[dependencies]
dashmap = "6.1.0"
fancy-regex = "0.17.0"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py38"] }
rayon = "1.11.0"
rhai = {version = "1.23.6", features = ["sync"]}
serde_json = "1.0.145"
sha2 = "0.10"
